--- a/instaclone/templates/post.html
+++ b/instaclone/templates/post.html
@@ -36,7 +36,7 @@
         <footer class="page-footer">
             <!-- Copyright -->
             <div class="footer-copyright text-center py-3 text-dark">
-                © Copyright 2022 InstaPics
+                © Copyright 2022 InstaStar
             </div>
             <!-- Copyright -->
         </footer>
