--- a/instaclone/templates/index.html
+++ b/instaclone/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="container-fluid">
-        {% include 'Navbar.html' %}
+        {% include 'navbar.html' %}
     </div>
     <main class="main-container">
         <section class="content-container">
