--- a/instaclone/templates/navbar.html
+++ b/instaclone/templates/navbar.html
@@ -4,7 +4,7 @@
     <nav class="header__content">
         <div class="header__buttons">
             <a href="{% url 'welcome'%}" name = 'welcome' class="header__home">
-                <img src={% static "assets/img/logo.png" %} width="130" height="43">
+                <img src={% static "static/img/logo.webp" %} width="130" height="43">
             </a>
         </div>
 
