add the edits to the templates

--- a/instaclone/templates/index.html
+++ b/instaclone/templates/index.html
@@ -264,7 +264,7 @@
               </div>
   
               <span class="side-menu__footer-copyright"
-                >&copy; 2022 InstaPics. A Django Instagram Clone</span
+                >&copy; 2022 InstaStar.</span
               >
             </div>
           </section>
