--- a/instaclone/templates/navbar.html
+++ b/instaclone/templates/navbar.html
@@ -16,7 +16,7 @@
         </div> {% endcomment %}
 
         <div class="header__buttons header__buttons--mobile">
-            <a href="{% url 'AddNewPost' user.username %}" name='AddNewPost'>
+            {% comment %} <a href="{% url 'AddNewPost' user.username %}" name='AddNewPost'> {% endcomment %}
             <svg
                 width="24"
                 height="24"
@@ -98,7 +98,7 @@
             <a href="">
                 <svg xmlns="https://www.w3.org/TR/SVG2/" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M20.563 3.34a1.002 1.002 0 0 0-.989-.079l-17 8a1 1 0 0 0 .026 1.821L8 15.445v6.722l5.836-4.168 4.764 2.084a1 1 0 0 0 1.399-.85l1-15a1.005 1.005 0 0 0-.436-.893zm-2.466 14.34-5.269-2.306L16 9.167l-7.649 4.25-2.932-1.283 13.471-6.34-.793 11.886z"></path></svg>
             </a>
-            <a href="{% url 'AddNewPost' user.username %}" name='AddNewPost'>
+            {% comment %} <a href="{% url 'AddNewPost' user.username %}" name='AddNewPost'> {% endcomment %}
                 <svg xmlns="https://www.w3.org/TR/SVG2/" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4z"></path><path d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"></path></svg>
             </a>
             <a href="">
@@ -122,9 +122,9 @@
                     </div>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="{% url 'MyProfile' user.username %}" name="MyProfile" style="font-size: 14px;">Profile</a>
-                  <a class="dropdown-item" href="{% url 'Settings' user.username %}" name='Settings' style="font-size: 14px;">Settings</a>
-                  <a class="dropdown-item" href="{% url 'Logout' %}" name="Logout" style="font-size: 14px;">Logout</a>
+                  {% comment %} <a class="dropdown-item" href="{% url 'MyProfile' user.username %}" name="MyProfile" style="font-size: 14px;">Profile</a> {% endcomment %}
+                  {% comment %} <a class="dropdown-item" href="{% url 'Settings' user.username %}" name='Settings' style="font-size: 14px;">Settings</a> {% endcomment %}
+                  {% comment %} <a class="dropdown-item" href="{% url 'Logout' %}" name="Logout" style="font-size: 14px;">Logout</a> {% endcomment %}
                 </div>
             </div>
         </div>
