--- a/instaclone/templates/django_registration/registration_form.html
+++ b/instaclone/templates/django_registration/registration_form.html
@@ -1,7 +1,11 @@
 {%extends "registration/base.html"%} {% load bootstrap4 %} {% block content %} <div class="container">
     <div class="row">
       <!-- Empty div -->
-      <div class="col-md-4"></div>
+      <div class="col-md-4">
+          <div class="panel-body card-body">
+              <img src="static/img/logo2.avif">
+          </div>
+      </div>
       <div class="col-md-4"> {% if form.errors %} <p> Some Information Might be Incorrect </p> {% endif %} <div
           class="panel panel-default card " id="register">
           <div class="panel-heading card-header bg-white">
@@ -24,21 +28,23 @@
       <!-- empty div -->
       <div class="col-md-4"></div>
     </div>
-  </div>
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <ul class="footer-flex">
-        <li class="text-muted">About</li>
-        <li class="text-muted">Blog</li>
-        <li class="text-muted">Jobs</li>
-        <li class="text-muted">Help</li>
-        <li class="text-muted">API</li>
-        <li class="text-muted">Privacy</li>
-        <li class="text-muted">Terms</li>
-        <li class="text-muted">TopAccounts</li>
-        <li class="text-muted">Hashtags</li>
-        <li class="text-muted">Locations</li>
-      </ul>
-      <p class="text-center text-muted mb-5">&copy;2022 InstaStar by Bel</p>
-    </div>
-  </footer> {% endblock %}
+ <div class="container-fluid">
+    <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <ul class="footer-flex">
+            <li class="text-muted">About</li>
+            <li class="text-muted">Blog</li>
+            <li class="text-muted">Jobs</li>
+            <li class="text-muted">Help</li>
+            <li class="text-muted">API</li>
+            <li class="text-muted">Privacy</li>
+            <li class="text-muted">Terms</li>
+            <li class="text-muted">TopAccounts</li>
+            <li class="text-muted">Hashtags</li>
+            <li class="text-muted">Locations</li>
+          </ul>
+          <p class="text-center text-muted mb-5">&copy;2022 InstaStar by Bel</p>
+        </div>
+      </footer> 
+ </div>
+  {% endblock %}
