--- a/instaclone/templates/profile/profile.html
+++ b/instaclone/templates/profile/profile.html
@@ -1,4 +1,4 @@
-{%extends 'base.html'%} {% load bootstrap4 %} {% load static %} {% block content %} <div class="container"
+{%extends 'main/base.html'%} {% load bootstrap4 %} {% load static %} {% block content %} <div class="container"
   style="margin-top:8%">
   <div class="content-section">
     <div class="media">
