--- a/instaclone/templates/main/navbar.html
+++ b/instaclone/templates/main/navbar.html
@@ -1,6 +1,6 @@
 {% load static %} <div class="navigation">
     <div class="navbar fixed-top bg-white">
-      <nav class="container">
+      <nav class="container" style="background-color: #C62383;">
         <span class="navbar-brand mb-0 h1">
           <a href="{% url 'home' %}"><img
               src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
