--- a/instaclone/templates/profile/profile.html
+++ b/instaclone/templates/profile/profile.html
@@ -9,6 +9,8 @@
             <img class="rounded-circle account-img" src="{{profile.profile_pic.url}}"
               style="width:12rem; height:12rem;object-fit: cover; margin-right: 3rem; border-radius: 50%;">
           </div>
+
+          #edit_profile
           <div class="col-md-6 mt-3">
             <div class="media-body">
               <div class="account-heading"><span class="mr-3 text-secondary username">{{ profile.user.username }}</span>
