--- a/instaclone/templates/main/search.html
+++ b/instaclone/templates/main/search.html
@@ -3,7 +3,10 @@
     <div class="container" style="margin-top:8%">
       <div class="content-section">
         <div class="media">
-          <div class="container"> {% if searched_user %} {% for user in searched_user %} <div class="search-flex"
+          <div class="container"> 
+              {% if searched_user %} 
+              {% for user in searched_user %} 
+              <div class="search-flex"
               style="display: flex; align-items: center; justify-content: center;">
               <div class="col-md-3">
                 <img class="rounded-circle account-img" src="{{user.profile.profile_pic.url}}"
