--- a/instaclone/templates/main/create_profile.html
+++ b/instaclone/templates/main/create_profile.html
@@ -1,4 +1,4 @@
-{%extends "registration/base.html"%} {% load bootstrap4 %} {% load static %} {% block content %}
+{%extends "main/base.html"%} {% load bootstrap4 %} {% load static %} {% block content %}
 <!-- CREATE PROFILE  -->
 <div class="container">
     <div id="wrapper" id="content">
