--- a/instaclone/templates/main/navbar.html
+++ b/instaclone/templates/main/navbar.html
@@ -33,7 +33,7 @@
           </div>
           <div class="modal-body text-left ">
             <ul class="modal-text">
-              <li><a href="/profile/{{request.user.id}}" class="text-modal">Profile</a></li>
+              <li><a href="/profile/{{request.user.profile.id}}/" class="text-modal">Profile</a></li>
               <hr>
               <li><a href="/upload/image" class="text-modal">Upload Image</a></li>
               <hr>
