--- a/instaclone/templates/profile/profile.html
+++ b/instaclone/templates/profile/profile.html
@@ -3,20 +3,23 @@
   <div class="content-section">
     <div class="media">
       <div class="container">
-        <div class="row"> {% if no_search %} <p class="text-center" style="font-size: 2rem;">{{no_search}}</p>
-          {% else %} {% if profile %} <div class="col-md-1"></div>
+        <div class="row"> {% if no_search %} 
+          <p class="text-center" style="font-size: 2rem;">{{no_search}}</p>
+          {% else %} 
+          {% if profile %} 
+          <div class="col-md-1"></div>
           <div class="col-md-3">
             <img class="rounded-circle account-img" src="{{profile.profile_pic.url}}"
               style="width:12rem; height:12rem;object-fit: cover; margin-right: 3rem; border-radius: 50%;">
           </div>
 
-          #edit_profile
+          
           <div class="col-md-6 mt-3">
             <div class="media-body">
               <div class="account-heading"><span class="mr-3 text-secondary username">{{ profile.user.username }}</span>
-                <a class="btn btn-sm btn-outline-secondary mr-3" data-toggle="modal"
+                <a href="/create_profile/" class="btn btn-sm btn-outline-secondary mr-3" data-toggle="modal"
                   data-target=".bd-example-modal-md"><strong>Edit Profile</strong></a>
-                <a class="mt-3" data-toggle="modal" data-target="#ModalCenter"><i class="fa fa-cog mt-3"
+                <a href="/create_profile/" class="mt-3" ata-toggle="modal" data-target="#ModalCenter"><i class="fa fa-cog mt-3"
                     id="cog"></i></a>
               </div>
               <div class="post-details mt-3 mb-3">
@@ -25,8 +28,10 @@
                 <span class="mr-5"> <strong>{{profile.following}}</strong> following</span>
               </div>
               <h5>{{ user.profile.name }}</h5>
-              <p class="text-secondary">{{ profile.bio }}</p> {%if profile.user.username == request.user.username%}
-              {% else%} {% if follow_form %} <form action="/profile/{{profile.id}}" method="post"
+              <p class="text-secondary">{{ profile.bio }}</p> 
+              {%if profile.user.username == request.user.username%}
+              {% else%} 
+              {% if follow_form %} <form action="/profile/{{profile.id}}" method="post"
                 style="margin-top: 2rem;"> {%csrf_token%} {% bootstrap_form follow_form%} <input type="submit"
                   class=" btn btn-primary" name="follow" value="Follow"
                   style="background-color: #3897f0!important; padding: 6px 9px;">
