remove .env from github

--- a/instaclone/templates/main/create_profile.html
+++ b/instaclone/templates/main/create_profile.html
@@ -32,6 +32,6 @@
             <li class="text-muted">Hashtags</li>
             <li class="text-muted">Locations</li>
         </ul>
-        <p class="text-center text-muted mb-5">&copy;2021 Instragam from Joy</p>
+        <p class="text-center text-muted mb-5">&copy;2022 InstaStar from Bel</p>
     </div>
 </footer> {% endblock %}
