--- a/instaclone/templates/main/edit_profile.html
+++ b/instaclone/templates/main/edit_profile.html
@@ -1,4 +1,6 @@
-{%extends "base.html"%} {% load bootstrap4 %} {% block content %}
+{%extends "main/base.html"%} 
+{% load bootstrap4 %} 
+{% block content %}
 {% if form.errors %}
 Check your input
 
