--- a/instaclone/templates/main/search.html
+++ b/instaclone/templates/main/search.html
@@ -9,7 +9,7 @@
               <div class="search-flex"
               style="display: flex; align-items: center; justify-content: center;">
               <div class="col-md-3">
-                <img class="rounded-circle account-img" src="{{user.profile.profile_pic.url}}"
+                <img class="rounded-circle account-img" src="{{user.profile.profile_image.url}}"
                   style="width:12rem; height:12rem;object-fit: cover; margin-right: 3rem; border-radius: 50%;">
               </div>
               <div class="col-md-6 mt-3">
